Manifest/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: devopsdemo1.azurecr.io/website:latest
        resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
        ports:
        - containerPort: 80
