Manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  selector:
    app : website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
