Manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: website.demo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: website
            port: 
              number: 80
